Revert "Localisation updates from https://translatewiki.net."
This reverts commit c0a720f179efdde42fbfa147410b7a4a081542d1.

# Conflicts:
#	Wikipedia/Localizations/hy.lproj/Localizable.strings
#	Wikipedia/Localizations/tcy.lproj/Localizable.strings

--- a/Wikipedia/Localizations/as.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/as.lproj/Localizable.strings
@@ -54,6 +54,7 @@
 "account-creation-saving" = "সাঁচি থোৱা হৈছে...";
 "account-creation-title" = "এটা নতুন একাউণ্ট সৃষ্টি কৰক";
 "account-group-title" = "আপোনাৰ একাউণ্ট";
+"account-talk-page-title" = "আপোনাৰ আলোচনা পৃষ্ঠা";
 "action-cancel" = "বাতিল কৰক";
 "action-find-in-page" = "এই পৃষ্ঠাত বিচাৰক";
 "action-language-accessibility" = "ভাষা সলনি কৰক";
