--- a/Wikipedia/Localizations/kn.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/kn.lproj/Localizable.strings
@@ -28,6 +28,7 @@
 "account-creation-saving" = "ಉಳಿಸಲಾಗುತ್ತಿದೆ....";
 "account-creation-title" = "ಹೊಸ ಖಾತೆಯನ್ನು ರಚಿಸಿ";
 "account-group-title" = "ನಿಮ್ಮ ಖಾತೆ";
+"account-talk-page-title" = "ನಿಮ್ಮ ಚರ್ಚೆಪುಟ";
 "account-talk-preferences-title" = "ಚರ್ಚೆಪುಟ ಪ್ರಾಶಸ್ತ್ಯಗಳು";
 "action-add-to-reading-list" = "ಓದುವ ಪಟ್ಟಿಗೆ ಸೇರಿಸಿ";
 "action-add-to-reading-list-short" = "ಪಟ್ಟಿಗೆ ಸೇರಿಸಿ";
