--- a/Wikipedia/Localizations/mhr.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/mhr.lproj/Localizable.strings
@@ -74,6 +74,7 @@
 "account-creation-title" = "У аккаунтым ышташ";
 "account-group-title" = "Тыйын аккаунтет";
 "account-request-vanishing" = "Аккаунтым кораҥдаш";
+"account-talk-page-title" = "Тыйын каҥашымаш велыжет";
 "account-talk-preferences-auto-sign-discussions" = "Каҥашымаште вигак кидпалым шындымаш";
 "account-talk-preferences-auto-sign-discussions-setting-explanation" = "Ойым пидмаш-влакын автоматически кид палым пыштымаште ончылгоч палемдыме кидпале кучылталташ тӱҥалеш";
 "account-talk-preferences-title" = "Каҥашымаш велыжын келыштарымашыже";
