--- a/Wikipedia/Localizations/es.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/es.lproj/Localizable.strings
@@ -127,6 +127,7 @@
 "account-creation-saving" = "Guardando…";
 "account-creation-title" = "Crear una cuenta nueva";
 "account-group-title" = "Tu cuenta";
+"account-talk-page-title" = "Tu página de discusión";
 "account-talk-preferences-auto-sign-discussions" = "Firmar automáticamente en las discusiones";
 "account-talk-preferences-auto-sign-discussions-setting-explanation" = "La firma automática de las discusiones usará la firma definida en tus ajustes de firma";
 "account-talk-preferences-title" = "Preferencias para las páginas de discusión";
@@ -265,6 +266,7 @@
 "continue-reading-empty-title" = "No hay artículos leídos recientemente";
 "description-add-title" = "Añadir descripción";
 "description-edit-for-article" = "Descripción de título para $1";
+"description-edit-length-warning" = "$1 / $2";
 "description-edit-license" = "Al cambiar la descripción del artículo, acepto los $1 y la publicación irrevocable de mis contribuciones bajo la licencia $2.";
 "description-edit-pencil-introduction" = "Editar introducción";
 "description-edit-pencil-title" = "Editar descripción de título";
@@ -788,6 +790,7 @@
 "problem-with-feature-title" = "Problema con la característica";
 "profile-page-donate" = "Donar";
 "profile-page-donate-subtext" = "O apoyar a Wikipedia con una donación para mantenerla libre y accesible para todos en todo el mundo.";
+"profile-page-done-button" = "Hecho";
 "profile-page-join-subtext" = "Regístrese a una cuenta de Wikipedia para rastrear sus contribuciones, guardar artículos fuera de línea y sincronizar entre dispositivos.";
 "profile-page-join-title" = "Únete a Wikipedia / Ingrese";
 "profile-page-logout" = "Salir de la sesión";
