--- a/Wikipedia/Localizations/ms.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/ms.lproj/Localizable.strings
@@ -77,6 +77,7 @@
 "account-creation-saving" = "Menyimpan...";
 "account-creation-title" = "Buka akaun baru";
 "account-group-title" = "Akaun anda";
+"account-talk-page-title" = "Laman perbincangan anda";
 "account-talk-preferences-title" = "Keutamaan laman perbincangan";
 "action-add-to" = "Tambah ke...";
 "action-add-to-reading-list" = "Tambahkan ke senarai bacaan";
@@ -155,6 +156,7 @@
 "data-migration-status" = "Mengemaskini...";
 "description-add-title" = "Tambah penerangan";
 "description-edit-for-article" = "Huraian rencana untuk $1";
+"description-edit-length-warning" = "$1 / $2";
 // Fuzzy
 "description-edit-license" = "Dengan mengubah keterangan tajuk, saya bersetuju dengan $1 dan untuk membatalkan pembaharuan tanpa izin di bawah lesen $2.";
 "description-edit-pencil-introduction" = "Sunting pengenalan";
