--- a/Wikipedia/Localizations/pt-br.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/pt-br.lproj/Localizable.strings
@@ -115,6 +115,7 @@
 "account-creation-title" = "Criar uma nova conta";
 "account-group-title" = "Sua conta";
 "account-request-vanishing" = "Fazer conta desaparecer";
+"account-talk-page-title" = "Sua página de discussão";
 "account-talk-preferences-auto-sign-discussions" = "Auto-assinar discussões";
 "account-talk-preferences-auto-sign-discussions-setting-explanation" = "A assinatura automática de discussões usará a assinatura definida nas configurações de assinatura";
 "account-talk-preferences-title" = "Preferências da página de discussão";
@@ -263,6 +264,7 @@
 "data-migration-status" = "Atualizando...";
 "description-add-title" = "Adicionar descrição";
 "description-edit-for-article" = "Descrição do artigo para $1";
+"description-edit-length-warning" = "$1 / $2";
 "description-edit-license" = "Ao alterar a descrição do artigo, eu concordo com os $1 e lanço as minhas contribuições irrevogavelmente sob a licença $2.";
 "description-edit-pencil-introduction" = "Editar introdução";
 "description-edit-pencil-title" = "Editar descrição do artigo";
