--- a/Wikipedia/Localizations/sd.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/sd.lproj/Localizable.strings
@@ -79,6 +79,7 @@
 "account-creation-title" = "نئون کاتو کوليو";
 "account-group-title" = "توهان جو کاتو";
 "account-request-vanishing" = "کاتو گم ڪريو";
+"account-talk-page-title" = "توھان جو بحث صفحو";
 "account-talk-preferences-auto-sign-discussions" = "پاڻمرادو-دستخط-ٿيل تبصرا";
 "account-talk-preferences-auto-sign-discussions-setting-explanation" = "تبصرن جو پاڻمرادو-دستخط-ڪرڻ دستخط ترتيبن ۾ وصف-ڪيل دستخط استعمال ڪندو";
 "account-talk-preferences-title" = "بحث صفحو ترجيحون";
@@ -166,6 +167,7 @@
 "data-migration-status" = "تجديد ڪندي...";
 "description-add-title" = "تشريح ڏيو";
 "description-edit-for-article" = "$1 لاءِ تشريح";
+"description-edit-length-warning" = "$1 / $2";
 "description-edit-license" = "مضمون جي تشريح بدلائيندي، آئون $1 سان ۽ پنھنجون ڀاڱيداريون بغير رد ڪئي $2 اجازتنامي ھيٺ جاري ڪرڻ لاءِ راضي آھيان.";
 "description-edit-pencil-introduction" = "تعارف سنواريو";
 "description-edit-pencil-title" = "مضمون جي تشريح سنواريو";
