--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1391,5 +1391,9 @@
 "wikitext-upload-save-terms-name" = "Terms of Use";
 "year-in-review-donate" = "Donate";
 "year-in-review-done" = "Done";
+"year-in-review-get-started" = "Get Started";
+"year-in-review-hide" = "Hide this feature";
 "year-in-review-next" = "Next";
 "year-in-review-share" = "Share";
+"year-in-review-subtitle" = "See insights about which articles you read on the Wikipedia app and the edits you made. Share your journey and discover what stood out for you this year. Your reading history is kept protected. Reading insights are calculated using locally stored data on your device.";
+"year-in-review-title" = "Explore your Wikipedia Year in Review";
