--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -1391,5 +1391,9 @@
 "wikitext-upload-save-terms-name" = "This message is used in the message [[Wikimedia:Wikipedia-ios-wikitext-upload-save-terms-and-license]].";
 "year-in-review-donate" = "Year in review donate button";
 "year-in-review-done" = "Year in review done button";
+"year-in-review-get-started" = "Button to continue to year in review";
+"year-in-review-hide" = "Button to hide year in review feature";
 "year-in-review-next" = "Year in review next button";
 "year-in-review-share" = "Year in review share button";
+"year-in-review-subtitle" = "Year in review page information";
+"year-in-review-title" = "Year in review page title";
